--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/add-customer.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/add-customer.html
@@ -77,7 +77,12 @@
                 <td>{{form.phone}}</td>
             
                 </tr>
-               
+                <tr>
+                  <td class="allif-fix-table-col">Address</td>
+                  <td>{{form.address}}</td>
+              
+                  </tr>
+                 
         </tbody>
         </table>
       </div>
@@ -90,12 +95,7 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Address</td>
-            <td>{{form.address}}</td>
-        
-            </tr>
-           
+          
               <tr>
                 <td class="allif-fix-table-col">Balance</td>
                 <td>{{form.balance}}</td>
@@ -116,6 +116,12 @@
                       <td>{{form.country}}</td>
                   
                       </tr>
+                      <tr>
+                        <td class="allif-fix-table-col">Contact</td>
+                        <td>{{form.contact}}</td>
+                    
+                        </tr>
+        
           </tbody>
           </table>
           </div>
@@ -134,27 +140,25 @@
               <td>{{form.turnover}}</td>
           
               </tr>
-              <tr>
-                <td class="allif-fix-table-col">Contact</td>
-                <td>{{form.contact}}</td>
-            
-                </tr>
-
+             
 
     <tr>
       <td class="allif-fix-table-col">Balance</td>
       <td>{{form.balance}}</td>
   
-              <tr>
-                <td class="allif-fix-table-col">Comments</td>
-                <td>{{form.comments}}</td>
-            
-                </tr>
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
+        <tr>
+          <td class="allif-fix-table-col">Comments</td>
+          <td>{{form.comments}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Payment Type</td>
+            <td>{{form.paymentType}}</td>
+      <tr>
+        <td class="allif-fix-table-col">Action</td>
+        <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+    
+        </tr>
           </tbody>
           </table>
   </div>
